--- a/index.html
+++ b/index.html
@@ -10,29 +10,31 @@
   </head>
 
   <body>
+    <section class="main"> 
+      <div class="main__content">
+         <h1 class="hi">Hi!!!</h1>
+        <p class="main__text">
+         Looking for people that are good at explaining things for Twitch streams!
+        </p> 
+        <p class="main__text">Format: 30-60min where someone teaches me something. <br/>Can be a presentation, demo or a conversation - ideally related to
+        programming.
+        </p>  
+        <p class="main__text">Audience: programmers with 0-3 years of experience.
+        </p>
+        <button class="main__button" type="button">
+              <a class="main__link" href="https://twitter.com/GirlsCodeMK" target="_blank">Come stream with us!</a>                
+        </button>
+      </div> 
 
-      <section class="main">  
-
-          <div class="main__content">
-            <p class="main__text">Hi! <br />
-             Looking for people that are good at explaining things for Twitch streams!
-            </p> 
-            <p class="main__text">Format: 30-60min where someone teaches me something. Can be a presentation, demo or a conversation - ideally related to
-            programming.
-            </p>  
-            <p class="main__text"></p>Audience: programmers with 0-3 years of experience.
-            </p>
-            <button class="main__button" type="button">
-                <a class="main__link" href="https://twitter.com/GirlsCodeMK" target="_blank">Come stream with us!</a>                
-            </button>
-          </div>
-
-          <div class="main__image">
-              <img class="main__img" src="img/colab_img.png">
-          </div>
-
+      <div class="main__image">
+          <img class="main__img" src="img/colab_img.png"></img>
+      </div>
     </section>
 
-    <footer class="footer">Coded with love by @pachicodes</footer>
+    <footer class="footer">Coded with love by 
+    <a class="footer__link" href="https://twitter.com/pachicodes" target="_blank"> 
+    @pachicodes</a>
+    </footer>
+
   </body>
 </html>
